# redissyncer-server

./: .drone.yml  .drone.yml.bak  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  README_en.md  docker-compose.yml  id_rsa  pom.xml  redissyncer.sh  syncerSetting.json
data/: init.sql  syncer.db
docs/: FunctionList.md  ToDo.md  api.md  api2.md  api2_v3.md  api_3.4.md  architectrue.md  data_structure.md  distributed.md  introduction.md  milestone.md  pit.md  quickstart.md  quickstart_en.md  redissyncer成长记.md  requirement.md  roadmap.md  scenecases.md  self.md  serverconfig.md  two-way_synchronization.md  using_documents.md  产品改进纪要.md  双向同步已解决以及面临的问题.md  双向同步设计.md  客户列表.md  直播资料.md  跨云托管redis实时同步.md
lib/: jim-cli-api-syncer-2.1.4.pom
redissyncer-cli/: README.md  config.yml  createtask.json  go.mod  go.sum  impfile.json  main.go  main_test.go  testcheck.json
rscli/: Cargo.toml  README.md
rscli/src/: config.yml  createtask.json  handle.rs  lib.rs  main.rs  task1.json
rscli/src/handle/: createtask.rs  deletetasks.rs  listtasks.rs  startstop.rs
rscli/tests/: tests.rs
syncer-common/: pom.xml
syncer-jedis/: pom.xml
syncer-replica/: pom.xml
syncer-replication/: pom.xml
syncer-replicator/: mulitaskId.txt  pom.xml
syncer-service/: pom.xml
syncer-transmission/: pom.xml
syncer-transmissions/: pom.xml
syncer-webapp/: .gitignore  HELP.md  pom.xml
syncerplus-common/: pom.xml
syncerplus-redis/: pom.xml
syncerplus-service/: pom.xml
syncerplus-webapp/: Dockerfile  pom.xml
testcase/: Todo.md  config.yml  createtask.json  go.mod  go.sum  (+3 more)
(+3578 files in other folders)
