[package]
name = "rscli"
version = "0.1.0"
authors = ["develop"]
edition = "2018"

[dependencies]
clap = "2.33.0"
reqwest = "0.9.19"
log = "0.4.7"
chrono = "0.4.7"
env_logger = "0.6.2"
serde = "1.0.98"
serde_json = "1.0.40"
yaml-rust = "0.4.3"
assert_cmd = "0.11.1"
predicates = "1.0.1"
# serde = "1.0"
# serde_yaml = "0.8"